# 15-618_Dynamic_Sparse_Decode

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_continuous_decode.cpp  bench_decode.cpp  bench_flashinfer_decode.py
experiment/: 00_backend_total_time.sh  01_decode_context_length_sweep.sh  02_decode_batch_scaling_sweep.sh  03_decode_topk_sparsity_sweep.sh  04_decode_page_size_sweep.sh  05_continuous_batching_load_sweep.sh  06_continuous_runtime_options_ablation.sh  07_attention_backend_breakdown.sh  README.md  common.sh  plot_00_backend_total_time.py  plot_01_decode_context_length_sweep.py  plot_02_decode_batch_scaling_sweep.py  plot_03_decode_topk_sparsity_sweep.py  plot_04_decode_page_size_sweep.py  plot_05_continuous_batching_load_sweep.py  plot_06_continuous_runtime_options_ablation.py  plot_07_attention_backend_breakdown.py  plot_common.py
include/dsd/: config.h  continuous_batching.h  cuda_dense_attention.h  cuda_sparse_attention.h  cuda_utils.h  decode_pipeline.h  device_page_pool.h  page_pool.h  paged_kv_cache.h  profiler.h  reference_kernels.h  synthetic_data.h  types.h
results/report_experiments/00_backend_total_time/: backend_total_time.csv
results/report_experiments/00_backend_total_time/raw/: ctx_1024.txt  ctx_4096.txt  ctx_512.txt
results/report_experiments/01_decode_context_length_sweep/: decode_context_length_sweep.csv
results/report_experiments/01_decode_context_length_sweep/raw/: ctx_1024.txt  ctx_2048.txt  ctx_4096.txt  ctx_512.txt  ctx_8192.txt
results/report_experiments/02_decode_batch_scaling_sweep/: decode_batch_scaling_sweep.csv
results/report_experiments/02_decode_batch_scaling_sweep/raw/: batch_1.txt  batch_16.txt  batch_2.txt  batch_32.txt  batch_4.txt  batch_64.txt  batch_8.txt
results/report_experiments/03_decode_topk_sparsity_sweep/: decode_topk_sparsity_sweep.csv
results/report_experiments/03_decode_topk_sparsity_sweep/raw/: topk_1.txt  topk_16.txt  topk_2.txt  topk_32.txt  topk_4.txt  topk_8.txt
results/report_experiments/04_decode_page_size_sweep/: decode_page_size_sweep.csv
results/report_experiments/04_decode_page_size_sweep/raw/: page_size_16.txt  page_size_32.txt  page_size_64.txt  page_size_8.txt
results/report_experiments/05_continuous_batching_load_sweep/: continuous_batching_load_sweep.csv
results/report_experiments/05_continuous_batching_load_sweep/raw/: arrival_window_0.txt  arrival_window_1024.txt  arrival_window_16.txt  arrival_window_256.txt  arrival_window_64.txt  ctx_1024_max_active_1.txt  ctx_1024_max_active_16.txt  ctx_1024_max_active_2.txt  ctx_1024_max_active_32.txt  ctx_1024_max_active_4.txt  ctx_1024_max_active_64.txt  ctx_1024_max_active_8.txt  ctx_2048_max_active_1.txt  ctx_2048_max_active_16.txt  ctx_2048_max_active_2.txt  ctx_2048_max_active_32.txt  ctx_2048_max_active_4.txt  ctx_2048_max_active_64.txt  ctx_2048_max_active_8.txt  ctx_4096_max_active_1.txt  ctx_4096_max_active_16.txt  ctx_4096_max_active_2.txt  ctx_4096_max_active_32.txt  ctx_4096_max_active_4.txt  ctx_4096_max_active_64.txt  ctx_4096_max_active_8.txt  max_active_1.txt  max_active_16.txt  max_active_2.txt  max_active_32.txt  max_active_4.txt  max_active_64.txt  max_active_8.txt
results/report_experiments/06_continuous_runtime_options_ablation/: continuous_runtime_options_ablation.csv
results/report_experiments/06_continuous_runtime_options_ablation/raw/: bursty_high_concurrency_cpu_decode_append.txt  bursty_high_concurrency_debug_tensors.txt  bursty_high_concurrency_dense_gpu_optimized.txt  bursty_high_concurrency_eager_release.txt  bursty_high_concurrency_no_kernel_events.txt  bursty_high_concurrency_no_payload_precompute.txt  bursty_high_concurrency_optimized.txt  bursty_high_concurrency_runtime_admit.txt  quick_cpu_cache_admit.txt  quick_cpu_decode_append.txt  quick_debug_tensors.txt  quick_dense_gpu_optimized.txt  quick_eager_release.txt  quick_no_kernel_events.txt  quick_no_payload_precompute.txt  quick_optimized.txt  quick_runtime_admit.txt  small_decode_cpu_cache_admit.txt  small_decode_cpu_decode_append.txt  small_decode_debug_tensors.txt  small_decode_dense_gpu_optimized.txt  small_decode_eager_release.txt  small_decode_no_kernel_events.txt  small_decode_no_payload_precompute.txt  small_decode_optimized.txt  small_decode_runtime_admit.txt  steady_load_cpu_cache_admit.txt  steady_load_cpu_decode_append.txt  steady_load_debug_tensors.txt  steady_load_dense_gpu_optimized.txt  steady_load_eager_release.txt  steady_load_no_kernel_events.txt  steady_load_no_payload_precompute.txt  steady_load_optimized.txt  steady_load_runtime_admit.txt
results/report_experiments/07_attention_backend_breakdown/: attention_backend_breakdown.csv
results/report_experiments/07_attention_backend_breakdown/raw/: ctx_1024.txt  ctx_16384.txt  ctx_4096.txt
src/: continuous_batching.cpp  cuda_dense_attention_stub.cpp  cuda_sparse_attention_stub.cpp  decode_pipeline.cpp  device_page_pool.cpp  main.cpp  page_pool.cpp  paged_kv_cache.cpp  reference_kernels.cpp  synthetic_data.cpp
src/cuda/: kernels.cu  sparse_attention.cu  sparse_batched_attention.cu
tests/: test_continuous_batching.cpp  test_dense_cuda.cpp  test_device_page_pool.cpp  test_page_pool.cpp  test_reference.cpp  test_sparse_cuda.cpp
